--- a/Index.html
+++ b/Index.html
@@ -1,1 +1,10 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Josh Kernick</title>
+</head>
+<body>
+This is the site
+</body>
+</html>
