--- a/index.html
+++ b/index.html
@@ -2,9 +2,28 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" type="text/css" href="stylesheet.css">
     <title>Josh Kernick</title>
 </head>
 <body>
-This is the site! fixed by Dad
+
+<div>
+  <ul>
+    <li><a href="#one">One</a></li>
+    <li><a href="#two">Two</a></li>
+    <li><a href="#three">Three</a></li>
+  </ul>
+</div>
+
+<div>
+  <p>
+    This is a juicy ass paragraph I got here, I'm just gonna make this longer so it takes up more lines. Oh look, I'm still going stong, typing away. Look how long this is now.
+  </p>
+  
+  <p>
+    Hot damn that's a nice paragraph
+  </p>
+</div>
+
 </body>
 </html>
