--- a/index.html
+++ b/index.html
@@ -1,29 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="stylesheet.css">
-    <title>Josh Kernick</title>
+  <title>Josh Kernick (new)</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="main.css">
 </head>
+
 <body>
+  <section>
 
-<div>
-  <ul>
-    <li><a href="#one">One</a></li>
-    <li><a href="#two">Two</a></li>
-    <li><a href="#three">Three</a></li>
-  </ul>
-</div>
+    <h1>Real Rockets in Kerbal Space Program</h1>
 
-<div>
-  <p>
-    This is a juicy ass paragraph I got here, I'm just gonna make this longer so it takes up more lines. Oh look, I'm still going stong, typing away. Look how long this is now.
-  </p>
-  
-  <p>
-    Hot damn that's a nice paragraph
-  </p>
-</div>
+    <div class="one">
+      <h2>Delta V Heavy</h2>
+
+      <div class="pics">
+        <img src="images/delta_V_heavy.jpg" alt="Delva V Heavy">
+        <img src="images/delta_V_heavy.jpg" alt="Delva V Heavy in KSP">
+      </div>
+
+      <p>Since the retirement of the Space Shuttle in 2011, the Delta V Heavy is
+         now the largest capacity rocket in operation. At $400 million per launch,
+         the Delta V heavy can get a payload of 28,790kg to LEO, using 62,8420kg of
+         propellant in the process.</p>
+    </div>
+
+    <div class="one">
+      <h2>Space Shuttle</h2>
+
+      <div class="pics">
+        <img src="images/Space_Shuttle.jpg" alt="Space Shuttle">
+        <img src="images/Space_Shuttle.jpg" alt="Space Shuttle in KSP">
+      </div>
+
+      <p>Text</p>
+    </div>
+
+    <div class="one">
+      <h2>Space Shuttle (Orbiter)</h2>
+
+      <div class="pics">
+        <img src="images/Space_Shuttle_Orbiter.jpg" alt="Space Shuttle Orbiter">
+        <img src="images/Space_Shuttle_Orbiter.jpg" alt="Space Shuttle Orbiter in KSP">
+      </div>
+
+      <p>Text</p>
+    </div>
+
+    <div class="one">
+      <h2>Atlas V 551</h2>
+
+      <div class="pics">
+        <img src="images/atlas_V_551.jpg" alt="Atlas V 551">
+        <img src="images/atlas_V_551.jpg" alt="Atlas V 551 in KSP">
+      </div>
+
+      <p>Text</p>
+    </div>
+
+    <div class="one">
+      <h2>Saturn 1B</h2>
+
+      <div class="pics">
+        <img src="images/saturn_1b.jpg" alt="Saturn 1B">
+        <img src="images/saturn_1b.jpg" alt="Saturn 1B in KSP">
+      </div>
+
+      <p>Text</p>
+    </div>
+
+  </section>
+
+  <section>
+
+    <h1>Using Python to control the rockets</h1>
+
+    <div class="one">Text</div>
+
+  </section>
 
 </body>
-</html>
