--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
       <h2>Delta V Heavy</h2>
 
       <div class="pics">
-        <img src="images/delta_V_heavy.jpg" alt="Delva V Heavy">
-        <img src="images/delta_V_heavy.jpg" alt="Delva V Heavy in KSP">
+        <img src="delta_V_heavy.jpg" alt="Delva V Heavy">
+        <img src="delta_V_heavy.jpg" alt="Delva V Heavy in KSP">
       </div>
 
       <p>Since the retirement of the Space Shuttle in 2011, the Delta V Heavy is
@@ -29,8 +29,8 @@
       <h2>Space Shuttle</h2>
 
       <div class="pics">
-        <img src="images/Space_Shuttle.jpg" alt="Space Shuttle">
-        <img src="images/Space_Shuttle.jpg" alt="Space Shuttle in KSP">
+        <img src="Space_Shuttle.jpg" alt="Space Shuttle">
+        <img src="Space_Shuttle.jpg" alt="Space Shuttle in KSP">
       </div>
 
       <p>Text</p>
@@ -40,8 +40,8 @@
       <h2>Space Shuttle (Orbiter)</h2>
 
       <div class="pics">
-        <img src="images/Space_Shuttle_Orbiter.jpg" alt="Space Shuttle Orbiter">
-        <img src="images/Space_Shuttle_Orbiter.jpg" alt="Space Shuttle Orbiter in KSP">
+        <img src="Space_Shuttle_Orbiter.jpg" alt="Space Shuttle Orbiter">
+        <img src="Space_Shuttle_Orbiter.jpg" alt="Space Shuttle Orbiter in KSP">
       </div>
 
       <p>Text</p>
@@ -51,8 +51,8 @@
       <h2>Atlas V 551</h2>
 
       <div class="pics">
-        <img src="images/atlas_V_551.jpg" alt="Atlas V 551">
-        <img src="images/atlas_V_551.jpg" alt="Atlas V 551 in KSP">
+        <img src="atlas_V_551.jpg" alt="Atlas V 551">
+        <img src="atlas_V_551.jpg" alt="Atlas V 551 in KSP">
       </div>
 
       <p>Text</p>
@@ -62,8 +62,8 @@
       <h2>Saturn 1B</h2>
 
       <div class="pics">
-        <img src="images/saturn_1b.jpg" alt="Saturn 1B">
-        <img src="images/saturn_1b.jpg" alt="Saturn 1B in KSP">
+        <img src="saturn_1b.jpg" alt="Saturn 1B">
+        <img src="saturn_1b.jpg" alt="Saturn 1B in KSP">
       </div>
 
       <p>Text</p>
