--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
       <h2>Delta V Heavy</h2>
 
       <div class="pics">
-        <img src="delta_V_heavy.jpg" alt="Delva V Heavy">
-        <img src="delta_V_heavy.jpg" alt="Delva V Heavy in KSP">
+        <img src="Delta_V_Heavy.jpg" alt="Delva V Heavy">
+        <img src="Delta_V_Heavy_KSP.png" alt="Delva V Heavy in KSP">
       </div>
 
       <p>Since the retirement of the Space Shuttle in 2011, the Delta V Heavy is
@@ -30,7 +30,7 @@
 
       <div class="pics">
         <img src="Space_Shuttle.jpg" alt="Space Shuttle">
-        <img src="Space_Shuttle.jpg" alt="Space Shuttle in KSP">
+        <img src="Space_Shuttle_KSP.png" alt="Space Shuttle in KSP">
       </div>
 
       <p>Text</p>
@@ -41,7 +41,7 @@
 
       <div class="pics">
         <img src="Space_Shuttle_Orbiter.jpg" alt="Space Shuttle Orbiter">
-        <img src="Space_Shuttle_Orbiter.jpg" alt="Space Shuttle Orbiter in KSP">
+        <img src="Space_Shuttle_Orbiter_KSP.png" alt="Space Shuttle Orbiter in KSP">
       </div>
 
       <p>Text</p>
@@ -51,8 +51,8 @@
       <h2>Atlas V 551</h2>
 
       <div class="pics">
-        <img src="atlas_V_551.jpg" alt="Atlas V 551">
-        <img src="atlas_V_551.jpg" alt="Atlas V 551 in KSP">
+        <img src="Atlas_V_551.jpg" alt="Atlas V 551">
+        <img src="Atlas_V_551_KSP.png" alt="Atlas V 551 in KSP">
       </div>
 
       <p>Text</p>
@@ -62,8 +62,8 @@
       <h2>Saturn 1B</h2>
 
       <div class="pics">
-        <img src="saturn_1b.jpg" alt="Saturn 1B">
-        <img src="saturn_1b.jpg" alt="Saturn 1B in KSP">
+        <img src="Saturn_1B.jpg" alt="Saturn 1B">
+        <img src="Saturn_1B_KSP.png" alt="Saturn 1B in KSP">
       </div>
 
       <p>Text</p>
