--- a/index.html
+++ b/index.html
@@ -20,9 +20,13 @@
       </div>
 
       <p>Since the retirement of the Space Shuttle in 2011, the Delta V Heavy is
-         now the largest capacity rocket in operation. At $400 million per launch,
-         the Delta V heavy can get a payload of 28,790kg to LEO, using 62,8420kg of
-         propellant in the process.</p>
+        now the largest capacity rocket in operation. At $400 million per launch,
+        the Delta V heavy can get a payload of 28,790kg to LEO, using 628,420kg
+        of propellant in the process.
+      </br></br>
+        Both the real rocket and the KSP replica use LH2 and LOX to fuel both stages,
+        but unlike the real rocket, the replica includes fuel pumps leading from
+        the side boosters to the core tank</p>
     </div>
 
     <div class="one">
@@ -33,7 +37,15 @@
         <img src="Space_Shuttle_KSP.png" alt="Space Shuttle in KSP">
       </div>
 
-      <p>Text</p>
+      <p>The Space Shuttle is one of the most recognisable rockets in history, this
+        particular image is of STS-120, flown by Space Shuttle Discorvery on 23/10/2007,
+        carrying the Harmoney module (node 2) to the ISS.
+      </br></br>
+        In order to get Discorvery to the ISS, the Space Shuttle used 3 RS-25 engines
+        fueled by LH2 and LOX, and two solid rocket boosteres attached on either
+        side of the large orange tank. The KSP replica uses a white tank, just like
+        the first two Shuttle missions. The white paint was removed after STS-2,
+        increasing the payload capacity.</p>
     </div>
 
     <div class="one">
@@ -44,7 +56,9 @@
         <img src="Space_Shuttle_Orbiter_KSP.png" alt="Space Shuttle Orbiter in KSP">
       </div>
 
-      <p>Text</p>
+      <p>On the left is a picture of the Space Shuttle Atlantis shortly before landing
+        at the KSC following STS-122. On the right is the KSP replica, firing in
+        OME (Orbital Maneuvering Engines) as is prepares for its journey back home.</p>
     </div>
 
     <div class="one">
