--- a/index.html
+++ b/index.html
@@ -69,7 +69,16 @@
         <img src="Atlas_V_551_KSP.png" alt="Atlas V 551 in KSP">
       </div>
 
-      <p>Text</p>
+      <p>The Atlas V is a 2 stage rocket operated by ULA. The first stage uses one
+        RD-180 engine, fueled by RP-1/LOX, while the second stage uses LH2/LOX to
+        fuel its single RL10 engine.
+      </br></br>
+        Perhaps what is most interesting about the Atlas V is the configuration
+        of its SRBs (Solid Rocket Boosters). As seen
+        <a href="https://en.wikipedia.org/wiki/Atlas_V#/media/File:Atlas_V_family.png">here</a>,
+        there SRBs are not symmetrical, which mean the thrust does not line up with
+        the center of mass. This would cause the rocket to rotate, but the engine
+        on the first stage can gimbal to cancel out this rotation.</p>
     </div>
 
     <div class="one">
@@ -80,7 +89,16 @@
         <img src="Saturn_1B_KSP.png" alt="Saturn 1B in KSP">
       </div>
 
-      <p>Text</p>
+      <p>The Saturn 1B played an important part in getting the first men on the moon.
+        Its resemblance to the Saturn V is no coincident, much of the Saturn V harware
+        was tested on the Saturn 1B, such as the CSM (Command/Service Module), the Lunar
+        Module, and the S-IVB upper stage. It flew the Apollo 5 mission, and sent
+        crew to Skylab, America's current space station.
+      </br></br>
+        Just the the real thing, the KSP replica has 8 engines in its first stage,
+        burning RP-1/LOX, and a single engine burning LH2/LOX in the S-IVB upper
+        stage. The replica can be seen taking the CSD to orbit, just like it did
+        in real life.</p>
     </div>
 
   </section>
