--- a/index.html
+++ b/index.html
@@ -105,9 +105,19 @@
 
   <section>
 
-    <h1>Using Python to control the rockets</h1>
+    <h1>Using Python to control rockets in KSP</h1>
 
-    <div class="one">Text</div>
+    <div class="one">
+      <p>Controlling rockets by hand itn't easy, but the mod
+        <a href="https://krpc.github.io/krpc/">kRPC</a>
+        allows you to write code in languages, such as Python, to conrol rockets
+        in KSP.</p>
+    </div>
+    <div class="one">
+      <h2>Gravity turn using kRPC</h2>
+      <p>I made a simple Python program that will control the pitch, roll and yaw
+        of the rocket, and will guide it into space. The only thing you have to
+        control is the throttle and staging.</p>
 
   </section>
 
