--- a/index.html
+++ b/index.html
@@ -113,11 +113,13 @@
         allows you to write code in languages, such as Python, to conrol rockets
         in KSP.</p>
     </div>
+
     <div class="one">
       <h2>Gravity turn using kRPC</h2>
       <p>I made a simple Python program that will control the pitch, roll and yaw
         of the rocket, and will guide it into space. The only thing you have to
         control is the throttle and staging.</p>
+    </div>
 
   </section>
 
