--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
 </head>
 
 <body>
+  
+  <section>
+
+    <div class="one">
+      <p>Intro</p>
+    </div>
+
+  </section>
+  
   <section>
 
     <h1>Real Rockets in Kerbal Space Program</h1>
@@ -115,10 +124,15 @@
     </div>
 
     <div class="one">
-      <h2>Gravity turn using kRPC</h2>
+      <h2>Gravity turn</h2>
       <p>I made a simple Python program that will control the pitch, roll and yaw
         of the rocket, and will guide it into space. The only thing you have to
-        control is the throttle and staging.</p>
+        control is the throttle and staging. The program changes your pitch based
+        uppon the rockets altitude, for every 500m gained in altitude, the pitch
+        decreases by 1°, capped out at 0°.
+      <br/><br/>
+        Code: <a href="https://github.com/JoshKernick/kRPC/blob/master/Gravtiy_turn.py">Gravity_turn.py</a>
+      </p>
     </div>
 
   </section>
