--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       </div>
 
       <p>On the left is a picture of the Space Shuttle Atlantis shortly before landing
-        at the KSC following STS-122. On the right is the KSP replica, firing in
+        at the KSC following STS-122. On the right is the KSP replica, firing it's
         OME (Orbital Maneuvering Engines) as is prepares for its journey back home.</p>
     </div>
 
