--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         <img src="Saturn_1B_KSP.png" alt="Saturn 1B in KSP">
       </div>
 
-      <p>The Saturn 1B played an important part in getting the first men on the moon.
+      <p>The Saturn 1B played an important part in getting the first men to the moon.
         Its resemblance to the Saturn V is no coincident, much of the Saturn V harware
         was tested on the Saturn 1B, such as the CSM (Command/Service Module), the Lunar
         Module, and the S-IVB upper stage. It flew the Apollo 5 mission, and sent
