--- a/index.html
+++ b/index.html
@@ -102,9 +102,9 @@
         Its resemblance to the Saturn V is no coincident, much of the Saturn V harware
         was tested on the Saturn 1B, such as the CSM (Command/Service Module), the Lunar
         Module, and the S-IVB upper stage. It flew the Apollo 5 mission, and sent
-        crew to Skylab, America's current space station.
+        crew to Skylab, America's space station at the time.
       </br></br>
-        Just the the real thing, the KSP replica has 8 engines in its first stage,
+        Just like the the real thing, the KSP replica has 8 engines in its first stage,
         burning RP-1/LOX, and a single engine burning LH2/LOX in the S-IVB upper
         stage. The replica can be seen taking the CSD to orbit, just like it did
         in real life.</p>
