--- a/index.html
+++ b/index.html
@@ -117,9 +117,9 @@
     <h1>Using Python to control rockets in KSP</h1>
 
     <div class="one">
-      <p>Controlling rockets by hand itn't easy, but the mod
+      <p>Controlling rockets by hand isn't easy, but the mod
         <a href="https://krpc.github.io/krpc/">kRPC</a>
-        allows you to write code in languages, such as Python, to conrol rockets
+        allows you to write code in languages, such as Python, to control rockets
         in KSP.</p>
     </div>
 
