--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
       <p>I made a simple Python program that will control the pitch, roll and yaw
         of the rocket, and will guide it into space. The only thing you have to
         control is the throttle and staging. The program changes your pitch based
-        uppon the rockets altitude, for every 500m gained in altitude, the pitch
+        upon the rockets altitude, for every 500m gained in altitude, the pitch
         decreases by 1°, capped out at 0°.
       <br/><br/>
         Code: <a href="https://github.com/JoshKernick/kRPC/blob/master/Gravtiy_turn.py">Gravity_turn.py</a>
