--- a/index.html
+++ b/index.html
@@ -8,18 +8,16 @@
 
 <body>
   <section>
-
-    <div class="one">
+    <header>
       <p>Intro</p>
-    </div>
-
+    </header>
   </section>
 
-  <section>
+  <section class="RRiKSP">
 
     <h1>Real Rockets in Kerbal Space Program</h1>
 
-    <div class="one">
+    <article>
       <h2>Delta V Heavy</h2>
 
       <div class="pics">
@@ -29,15 +27,15 @@
 
       <p>Since the retirement of the Space Shuttle in 2011, the Delta V Heavy is
         now the largest capacity rocket in operation. At $400 million per launch,
-        the Delta V heavy can get a payload of 28,790kg to LEO, using 628,420kg
-        of propellant in the process.
+        the Delta V heavy can get a payload of 28,790kg to LEO (Low Earth Orbit),
+        using 628,420kg of propellant in the process.
       </br></br>
-        Both the real rocket and the KSP replica use LH2/LOX to fuel both stages,
-        but unlike the real rocket, the replica includes fuel pumps leading from
-        the side boosters to the core tank</p>
-    </div>
+        Both the real rocket and the KSP (Kerbal Space Program) replica use LH2/LOX
+        to fuel both stages, but unlike the real rocket, the replica includes fuel
+        pumps leading from the side boosters to the core tank</p>
+    </article>
 
-    <div class="one">
+    <article>
       <h2>Space Shuttle</h2>
 
       <div class="pics">
@@ -54,9 +52,9 @@
         side of the large orange tank. The KSP replica uses a white tank, just like
         the first two Shuttle missions. The white paint was removed after STS-2,
         increasing the payload capacity.</p>
-    </div>
+    </article>
 
-    <div class="one">
+    <article>
       <h2>Space Shuttle (Orbiter)</h2>
 
       <div class="pics">
@@ -67,9 +65,9 @@
       <p>On the left is a picture of the Space Shuttle Atlantis shortly before landing
         at the KSC following STS-122. On the right is the KSP replica, firing it's
         OME (Orbital Maneuvering Engines) as is prepares for its journey back home.</p>
-    </div>
+    </article>
 
-    <div class="one">
+    <article>
       <h2>Atlas V 551</h2>
 
       <div class="pics">
@@ -77,19 +75,19 @@
         <img src="images/Atlas_V_551_KSP.png" alt="Atlas V 551 in KSP">
       </div>
 
-      <p>The Atlas V is a 2 stage rocket operated by ULA. The first stage uses one
-        RD-180 engine, fueled by RP-1/LOX, while the second stage uses LH2/LOX to
-        fuel its single RL10 engine.
+      <p>The Atlas V is a 2 stage rocket operated by ULA (United Launch Alliance).
+        The first stage uses a single RD-180 engine, fueled by RP-1/LOX, while the
+        second stage uses LH2/LOX to fuel its RL10 engine.
       </br></br>
         Perhaps what is most interesting about the Atlas V is the configuration
         of its SRBs (Solid Rocket Boosters). As seen
         <a href="https://en.wikipedia.org/wiki/Atlas_V#/media/File:Atlas_V_family.png">here</a>,
-        there SRBs are not symmetrical, which mean the thrust does not line up with
+        there SRBs are asymmetrical, meaning the thrust does not line up with
         the center of mass. This would cause the rocket to rotate, but the engine
-        on the first stage can gimbal to cancel out this rotation.</p>
-    </div>
+        on the first stage can gimbal (pivot) to cancel out this rotation.</p>
+    </article>
 
-    <div class="one">
+    <article>
       <h2>Saturn 1B</h2>
 
       <div class="pics">
@@ -98,16 +96,15 @@
       </div>
 
       <p>The Saturn 1B played an important part in getting the first men on the moon.
-        It's resemblance to the Saturn V is no coincident, much of the Saturn V harware
-        was tested on the Saturn 1B, such as the CSM (Command/Service Module), the Lunar
-        Module, and the S-IVB upper stage. It flew the Apollo 5 mission, and sent
-        crew to Skylab, America's current space station.
+        It's resemblance to the Saturn V is no coincident, much of the hardware used
+        on the Saturn V was tested on the Saturn 1B, such as the CSM (Command/Service Module),
+        the LM (Lunar Module), and the S-IVB upper stage. It flew the Apollo 5 mission,
+        and sent crew to Skylab, an old America space station.
       </br></br>
         Just the the real thing, the KSP replica has 8 engines in its first stage,
         burning RP-1/LOX, and a single engine burning LH2/LOX in the S-IVB upper
-        stage. The replica can be seen taking the CSD to orbit, just like it did
-        in real life.</p>
-    </div>
+        stage. The replica can be seen shortly after lift off, taking the CSM to orbit.</p>
+    </article>
 
   </section>
 
