--- a/index.html
+++ b/index.html
@@ -32,7 +32,10 @@
       </br></br>
         Both the real rocket and the KSP (Kerbal Space Program) replica use LH2/LOX
         to fuel both stages, but unlike the real rocket, the replica includes fuel
-        pumps leading from the side boosters to the core tank</p>
+        pumps leading from the side boosters to the center core. The Falcon Heavy
+        will feature simlar fuel crossfeed, but seeing as this is much harder to
+        implement in real life, only 6/9 engines in the center core will be feuled
+        from the side boosters.</p>
     </article>
 
     <article>
