--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <section>
     <header>
-      <p>Intro</p>
+      <p><a target="_blank" href="https://github.com/JoshKernick/JoshKernick.github.io">Github link</a></p>
     </header>
   </section>
 
