Added more links

--- a/index.html
+++ b/index.html
@@ -9,7 +9,14 @@
 <body>
   <section>
     <header>
-      <p><a target="_blank" href="https://github.com/JoshKernick/JoshKernick.github.io">Github link</a></p>
+      <p>
+        Links:
+        <ul>
+          <li><a target="_blank" href="https://github.com/JoshKernick/JoshKernick.github.io">Github</a></li>
+          <li><a target="_blank" href="https://www.codewars.com/users/JoshKernick">Codewars</a></li>
+          <li><a target="_blank" href="https://www.freecodecamp.org/fccaf536742-18bf-4be9-89ed-7f86510ea5e9">FreeCodeCamp</a></li>
+        </ul>
+      </p>
     </header>
   </section>
 
