--- a/index.html
+++ b/index.html
@@ -9,14 +9,7 @@
 <body>
   <section>
     <header>
-      <p>
-        Links:
-        <ul>
-          <li><a target="_blank" href="https://github.com/JoshKernick/JoshKernick.github.io">Github</a></li>
-          <li><a target="_blank" href="https://www.codewars.com/users/JoshKernick">Codewars</a></li>
-          <li><a target="_blank" href="https://www.freecodecamp.org/fccaf536742-18bf-4be9-89ed-7f86510ea5e9">FreeCodeCamp</a></li>
-        </ul>
-      </p>
+      Intro
     </header>
   </section>
 
@@ -140,6 +133,21 @@
         Code: <a href="https://github.com/JoshKernick/kRPC/blob/master/Gravtiy_turn.py">Gravity_turn.py</a>
       </p>
     </div>
+
+  </section>
+
+  <section>
+
+    <footer>
+      <p>
+        Links:
+        <ul>
+          <li><a target="_blank" href="https://github.com/JoshKernick/JoshKernick.github.io">Github</a></li>
+          <li><a target="_blank" href="https://www.codewars.com/users/JoshKernick">Codewars</a></li>
+          <li><a target="_blank" href="https://www.freecodecamp.org/fccaf536742-18bf-4be9-89ed-7f86510ea5e9">FreeCodeCamp</a></li>
+        </ul>
+      </p>
+    </footer>
 
   </section>
 
