--- a/page2.html
+++ b/page2.html
@@ -11,7 +11,7 @@
 
   <nav>
     <ul class="navbar">
-      <li><a href="main.html">Home</a></li>
+      <li><a href="index.html">Home</a></li>
       <li><a href="page1.html">Page 1</a></li>
       <li><a class="active">Page 2</a></li>
     </ul>
