--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <p>This years Gif of the Year Award goes to this gif! The competion didn't
         even come close, this gif truly is in a league of its own.</p>
       <div class="pic">
-        <img src="images/GOTY.gif" alt="GOTY"></img>
+        <img src="https://i.imgur.com/6rNTk1R.mp4" alt="GOTY"></img>
       </div>
     </div>
   </section>
