--- a/index.html
+++ b/index.html
@@ -31,24 +31,12 @@
 
   <section>
     <div>
-      <h1>Gif of the Year</h1>
-      <p>This years Gif of the Year Award goes to this gif! The competion didn't
-        even come close, this gif truly is in a league of its own.</p>
+      <h1>Images and Gifs</h1>
+      <p>This is where the images and gifs live</p>
       <div class="pic">
-        <img src="https://i.imgur.com/6rNTk1R.mp4" alt="GOTY"></img>
+        <img src="https://i.imgur.com/6rNTk1R.gif" alt="GOTY"></img>
       </div>
     </div>
-  </section>
-
-  <section>
-    <div>
-      <h1>Animal gifs</h2>
-      <p>This is the animal gif page, a new gif will be uploaded weekly, or whenever
-        I feel like uploading one.
-      <div class="pic">
-        <img src="https://i.giphy.com/media/1TOSaJsWtnhe0/giphy.webp" alt="Cat gif"></img>
-        <img src="https://i.giphy.com/media/OmK8lulOMQ9XO/giphy.webp" alt="Cat gif"></img>
-      </div>
   </section>
 
 </body>
