--- a/page2.html
+++ b/page2.html
@@ -28,17 +28,22 @@
         <li><a target="_blank" href="https://github.com/JoshKernick">Github</a>
            - The source code for this page can be found here on my Github page,
           I made it all myself, please don't steal it.</li>
+        <li><a target="_blank" href="https://github.com/JoshKernick">Github</a>
+           - The source code for this page can be found here on my Github page,
+          I made it all myself, please don't steal it.</li>
+
       </ul>
     </div>
   </section>
 
   <section>
     <div>
-      <h1>Title no.2</h1>
-      <p>
-        This page has 2 sections</br>
-        If you have any feed back then let me know somehow.
-      </p>
+      <h1>Orbital Velocity</h1>
+      <p>Enter your orbital height (in meters) in the box below, and the orbital
+        velocity will be displayed.</p>
+      <div class="orbit">
+        <input id="OV" type="number" value="400000" min="100000" step="10000">
+      </div>
     </div>
   </section>
 
