--- a/index.html
+++ b/index.html
@@ -30,13 +30,24 @@
   </section>
 
   <section>
-    <div>
-      <h1>Images and Gifs</h1>
-      <p>This is where the images and gifs live</p>
-      <div class="pic">
-        <img src="https://i.imgur.com/6rNTk1R.gif" alt="GOTY"></img>
+      <h2>Delta V Heavy</h2>
+
+      <div class="pics">
+        <img src="images/Delta_V_Heavy.jpg" alt="Delva V Heavy">
+        <img src="images/Delta_V_Heavy_KSP.png" alt="Delva V Heavy in KSP">
       </div>
-    </div>
+
+      <p>Since the retirement of the Space Shuttle in 2011, the Delta V Heavy is
+        now the largest capacity rocket in operation. At $400 million per launch,
+        the Delta V heavy can get a payload of 28,790kg to LEO (Low Earth Orbit),
+        using 628,420kg of propellant in the process.
+      </br></br>
+        Both the real rocket and the KSP (Kerbal Space Program) replica use LH2/LOX
+        to fuel both stages, but unlike the real rocket, the replica includes fuel
+        pumps leading from the side boosters to the center core. The Falcon Heavy
+        will feature simlar fuel crossfeed, but seeing as this is much harder to
+        implement in real life, only 6/9 engines in the center core will be feuled
+        from the side boosters.</p>
   </section>
 
 </body>
