--- a/index.html
+++ b/index.html
@@ -5,50 +5,97 @@
   <title>Website - Home</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="main.css">
+  <script>
+    function tabChange(id) {
+      document.getElementById("tab1").style.display = id == "tab1"? "block": "none";
+      document.getElementById("tab2").style.display = id == "tab2"? "block": "none";
+      document.getElementById("tab3").style.display = id == "tab3"? "block": "none";
+    }
+
+    function orbitVelocity() {
+      var radius = document.getElementById("OV");
+      document.getElementById("OVresult").innerHTML = "Velocity: " + radius.value * 2;
+    }
+  </script>
 </head>
 
 <body>
 
   <nav>
     <ul class="navbar">
-      <li><a class="active">Home</a></li>
-      <li><a href="page1.html">Page 1</a></li>
-      <li><a href="page2.html">Page 2</a></li>
+      <li><a onclick="tabChange('tab1')">Home</a></li>
+      <li><a onclick="tabChange('tab2')">Page 1</a></li>
+      <li><a onclick="tabChange('tab3')">Page 2</a></li>
     </ul>
 
     <div id="navline"></div>
   </nav>
 
-  <section>
-    <div>
-      <h1>The Josh Kernick web page</h1>
-      <p>
-        This is the a website made by me, Josh Kernick. It has no real perpose
-        other that to be a website. I hope you enjoy ;)
-      </p>
-    </div>
-  </section>
-
-  <section>
-      <h2>Delta V Heavy</h2>
-
-      <div class="pics">
-        <img src="images/Delta_V_Heavy.jpg" alt="Delva V Heavy">
-        <img src="images/Delta_V_Heavy_KSP.png" alt="Delva V Heavy in KSP">
+  <article id="tab1">
+    <section>
+      <div>
+        <h1>The Josh Kernick web page</h1>
+        <p>
+          This is the a website made by me, Josh Kernick. It has no real perpose
+          other that to be a website. I hope you enjoy ;)
+        </p>
       </div>
+    </section>
+  </article>
 
-      <p>Since the retirement of the Space Shuttle in 2011, the Delta V Heavy is
-        now the largest capacity rocket in operation. At $400 million per launch,
-        the Delta V heavy can get a payload of 28,790kg to LEO (Low Earth Orbit),
-        using 628,420kg of propellant in the process.
-      </br></br>
-        Both the real rocket and the KSP (Kerbal Space Program) replica use LH2/LOX
-        to fuel both stages, but unlike the real rocket, the replica includes fuel
-        pumps leading from the side boosters to the center core. The Falcon Heavy
-        will feature simlar fuel crossfeed, but seeing as this is much harder to
-        implement in real life, only 6/9 engines in the center core will be feuled
-        from the side boosters.</p>
-  </section>
+  <article id="tab2">
+    <section>
+      <div>
+        <h1>Delta V Heavy</h1>
+
+        <div class="pics">
+          <img src="images/Delta_V_Heavy.jpg" alt="Delva V Heavy">
+          <img src="images/Delta_V_Heavy_KSP.png" alt="Delva V Heavy in KSP">
+        </div>
+
+        <p>Since the retirement of the Space Shuttle in 2011, the Delta V Heavy is
+          now the largest capacity rocket in operation. At $400 million per launch,
+          the Delta V heavy can get a payload of 28,790kg to LEO (Low Earth Orbit),
+          using 628,420kg of propellant in the process.</p>
+        <p>Both the real rocket and the KSP (Kerbal Space Program) replica use LH2/LOX
+          to fuel both stages, but unlike the real rocket, the replica includes fuel
+          pumps leading from the side boosters to the center core. The Falcon Heavy
+          will feature simlar fuel crossfeed, but seeing as this is much harder to
+          implement in real life, only 6/9 engines in the center core will be feuled
+          from the side boosters.</p>
+      </div>
+    </section>
+  </article>
+
+  <article id="tab3" style="display: block">
+    <section>
+      <div>
+        <h1>Links</h1>
+        <p>These are various links to profiles I have on other sites, click them
+          to open a new tab.
+        <ul class="links">
+          <li><a target="_blank" href="https://github.com/JoshKernick">Github</a>
+             - The source code for this page can be found here on my Github page,
+            I made it all myself, please don't steal it.</li>
+          <li><a target="_blank" href="https://github.com/JoshKernick">Github</a>
+             - The source code for this page can be found here on my Github page,
+            I made it all myself, please don't steal it.</li>
+        </ul>
+      </div>
+    </section>
+
+    <section>
+      <div>
+        <h1>Orbital Velocity Calculator</h1>
+        <p>Enter your orbital height (in meters) in the box below, and the orbital
+          velocity will be displayed.</p>
+        <div class="orbit">
+          <input id="OV" onchange="orbitVelocity();" onkeyup="orbitVelocity();"  type="number" value="400000" min="100000" step="10000">
+          <p id="OVresult">Velocity: </p>
+        </div>
+      </div>
+    </section>
+  </article>
 
 </body>
 
