dont look at #navbar, look at the h1 border

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       var radius = document.getElementById("OV");
       document.getElementById("OVresult").innerHTML = "Velocity (m/s): " + radius.value;
     }
-    // (((G * M) / 6371000 + radius.value) ** 0.5)
+    // ((G * M) / (6371000 + radius.value)) ** 0.5
   </script>
 </head>
 
