added more content

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <div id="navline"></div>
   </nav>
 
-  <section id="tab1" style="display: block">
+  <section id="tab1">
     <article>
       <div>
         <h1>The Josh Kernick web page</h1>
@@ -48,7 +48,7 @@
     </article>
   </section>
 
-  <section id="tab2">
+  <section id="tab2" style="display: block">
     <article>
       <div>
         <h1>Delta V Heavy</h1>
@@ -68,6 +68,85 @@
           will feature simlar fuel crossfeed, but seeing as this is much harder to
           implement in real life, only 6/9 engines in the center core will be feuled
           from the side boosters.</p>
+      </div>
+    </article>
+
+    <article>
+      <div>
+        <h1>Space Shuttle</h1>
+
+        <div class="pics">
+          <img src="images/Space_Shuttle.jpg" alt="Space Shuttle">
+          <img src="images/Space_Shuttle_KSP.png" alt="Space Shuttle in KSP">
+        </div>
+
+        <p>The Space Shuttle is one of the most recognisable rockets in history, this
+          particular image is of STS-120, flown by Space Shuttle Discorvery on 23/10/2007,
+          carrying the Harmoney module (node 2) to the ISS.
+        </br></br>
+          In order to get Discorvery to the ISS, the Space Shuttle used 3 RS-25 engines
+          fueled by LH2/LOX, and two solid rocket boosteres attached on either
+          side of the large orange tank. The KSP replica uses a white tank, just like
+          the first two Shuttle missions. The white paint was removed after STS-2,
+          increasing the payload capacity.</p>
+        </div>
+    </article>
+
+    <article>
+      <div>
+        <h1>Space Shuttle (Orbiter)</h1>
+
+        <div class="pics">
+          <img src="images/Space_Shuttle_Orbiter.jpg" alt="Space Shuttle Orbiter">
+          <img src="images/Space_Shuttle_Orbiter_KSP.png" alt="Space Shuttle Orbiter in KSP">
+        </div>
+
+        <p>On the left is a picture of the Space Shuttle Atlantis shortly before landing
+          at the KSC following STS-122. On the right is the KSP replica, firing it's
+          OME (Orbital Maneuvering Engines) as is prepares for its journey back home.</p>
+        </div>
+    </article>
+
+    <article>
+      <div>
+        <h1>Atlas V 551</h1>
+
+        <div class="pics">
+          <img src="images/Atlas_V_551.jpg" alt="Atlas V 551">
+          <img src="images/Atlas_V_551_KSP.png" alt="Atlas V 551 in KSP">
+        </div>
+
+        <p>The Atlas V is a 2 stage rocket operated by ULA (United Launch Alliance).
+          The first stage uses a single RD-180 engine, fueled by RP-1/LOX, while the
+          second stage uses LH2/LOX to fuel its RL10 engine.
+        </br></br>
+          Perhaps what is most interesting about the Atlas V is the configuration
+          of its SRBs (Solid Rocket Boosters). As seen
+          <a href="https://en.wikipedia.org/wiki/Atlas_V#/media/File:Atlas_V_family.png">here</a>,
+          there SRBs are asymmetrical, meaning the thrust does not line up with
+          the center of mass. This would cause the rocket to rotate, but the engine
+          on the first stage can gimbal (pivot) to cancel out this rotation.</p>
+        </div>
+    </article>
+
+    <article>
+      <div>
+        <h1>Saturn 1B</h1>
+
+        <div class="pics">
+          <img src="images/Saturn_1B.jpg" alt="Saturn 1B">
+          <img src="images/Saturn_1B_KSP.png" alt="Saturn 1B in KSP">
+        </div>
+
+        <p>The Saturn 1B played an important part in getting the first men on the moon.
+          It's resemblance to the Saturn V is no coincident, much of the hardware used
+          on the Saturn V was tested on the Saturn 1B, such as the CSM (Command/Service Module),
+          the LM (Lunar Module), and the S-IVB upper stage. It flew the Apollo 5 mission,
+          and sent crew to Skylab, an old America space station.
+        </br></br>
+          Just the the real thing, the KSP replica has 8 engines in its first stage,
+          burning RP-1/LOX, and a single engine burning LH2/LOX in the S-IVB upper
+          stage. The replica can be seen shortly after lift off, taking the CSM to orbit.</p>
       </div>
     </article>
   </section>
