--- a/index.html
+++ b/index.html
@@ -141,20 +141,6 @@
 
   <section id="tab3">
     <article>
-      <h1>Links</h1>
-      <p>These are various links to profiles I have on other sites, click them
-        to open a new tab.
-      <ul class="links">
-        <li><a target="_blank" href="https://github.com/JoshKernick">Github</a>
-           - The source code for this page can be found here on my Github page,
-          I made it all myself, please don't steal it.</li>
-        <li><a target="_blank" href="https://github.com/JoshKernick">Github</a>
-           - The source code for this page can be found here on my Github page,
-          I made it all myself, please don't steal it.</li>
-      </ul>
-    </article>
-
-    <article>
       <h1>Orbital Velocity Calculator</h1>
       <p>Enter your orbital height (in meters) in the box below, and the orbital
         velocity will be displayed. (This doesn't work yet)</p>
@@ -162,6 +148,21 @@
         <input id="OV" onchange="orbitVelocity();" onkeyup="orbitVelocity();" type="number" value="400000" min="100000" step="10000">
         <p id="OVresult">Velocity (m/s): </p>
       </div>
+    </article>
+
+    <article>
+      <h1>Links</h1>
+      <p>These are various links to profiles I have on other sites, click them
+        to open a new tab.
+      <ul class="links">
+        <li><a target="_blank" href="https://github.com/JoshKernick">Github</a>
+           - The source code for this page can be found here on my Github page,
+          I made it all myself, please don't steal it.</li>
+        <li><a target="_blank" href="https://www.codewars.com/users/JoshKernick">Codewars</a>
+           - My codewars account</li>
+        <li><a target="_blank" href="https://www.freecodecamp.org/fccaf536742-18bf-4be9-89ed-7f86510ea5e9">FreeCodeCamp</a>
+           - My freecodecamp account</li>
+      </ul>
     </article>
   </section>
 
