some very key changes in this so watch out

--- a/index.html
+++ b/index.html
@@ -77,9 +77,8 @@
 
       <p>The Space Shuttle is one of the most recognisable rockets in history, this
         particular image is of STS-120, flown by Space Shuttle Discorvery on 23/10/2007,
-        carrying the Harmoney module (node 2) to the ISS.
-      </br></br>
-        In order to get Discorvery to the ISS, the Space Shuttle used 3 RS-25 engines
+        carrying the Harmoney module (node 2) to the ISS.</p>
+      <p>In order to get Discorvery to the ISS, the Space Shuttle used 3 RS-25 engines
         fueled by LH2/LOX, and two solid rocket boosteres attached on either
         side of the large orange tank. The KSP replica uses a white tank, just like
         the first two Shuttle missions. The white paint was removed after STS-2,
@@ -109,9 +108,8 @@
 
       <p>The Atlas V is a 2 stage rocket operated by ULA (United Launch Alliance).
         The first stage uses a single RD-180 engine, fueled by RP-1/LOX, while the
-        second stage uses LH2/LOX to fuel its RL10 engine.
-      </br></br>
-        Perhaps what is most interesting about the Atlas V is the configuration
+        second stage uses LH2/LOX to fuel its RL10 engine.</p>
+      <p>Perhaps what is most interesting about the Atlas V is the configuration
         of its SRBs (Solid Rocket Boosters). As seen
         <a href="https://en.wikipedia.org/wiki/Atlas_V#/media/File:Atlas_V_family.png">here</a>,
         there SRBs are asymmetrical, meaning the thrust does not line up with
@@ -131,9 +129,8 @@
         It's resemblance to the Saturn V is no coincident, much of the hardware used
         on the Saturn V was tested on the Saturn 1B, such as the CSM (Command/Service Module),
         the LM (Lunar Module), and the S-IVB upper stage. It flew the Apollo 5 mission,
-        and sent crew to Skylab, an old America space station.
-      </br></br>
-        Just the the real thing, the KSP replica has 8 engines in its first stage,
+        and sent crew to Skylab, an old America space station.</p>
+      <p>Just the the real thing, the KSP replica has 8 engines in its first stage,
         burning RP-1/LOX, and a single engine burning LH2/LOX in the S-IVB upper
         stage. The replica can be seen shortly after lift off, taking the CSM to orbit.</p>
     </article>
